fixed spacing between paragraphs when small

--- a/themes/ne555-minimal/static/css/style.css
+++ b/themes/ne555-minimal/static/css/style.css
@@ -405,6 +405,22 @@ p,
 figure {
   margin-bottom: 20px;
 }
+
+@media only screen and (max-width: 600px) {
+  h1 {
+    margin-bottom: 20px;
+  }
+  h2 {
+    margin: 25px 0px 15px 0px;
+  }
+  hr {
+    margin: 10px 0px;
+  }
+  p, figure {
+    margin-bottom: 10px;
+  }
+}
+
 a,
 a:visited {
   color: var(--color-accent-base);
